Goosehouseへのリンク追加

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 <li><a href="" target="currentPlay" id="currentPlay">再生中の曲</a></li>
                 <li><a href="javascript:void(0);" onclick="replay();">この曲最初から!</a></li>
             </ul>
+            <ul>
+                <li><a href="http://goosehouse.jp/" target="_blank">オフィシャルページ</a></li>
+                <li><a href="http://www.ustream.tv/channel/playyouhouse" target="_blank">オフィシャルustream</a></li>
+            </ul>
 
         </div>
         <div class="col-md-10">
