画質設定が反映されてないバグに気がついたので対応

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
         }
     }
 
-    function updateQuality(quality) {
-
+    function updateQuality(qu) {
+        quality = qu;
     }
 
     function toSequential() {
