バグってたので治した

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="col-md-10">
             <div id="player"></div>
             <p>
-            <div class="btn-group " data-toggle="buttons">
+            <div class="btn-group">
             <a class="btn btn-primary" href="javascript:void(0);" onclick="prevPlay();"><span class="glyphicon glyphicon-step-backward"></span>前の曲</a>
             <a class="btn btn-primary" href="javascript:void(0);" onclick="replay();"><span class="glyphicon glyphicon-backward"></span>この曲最初から!</a>
             <a class="btn btn-primary" href="javascript:void(0);" onclick="stop();"><span class="glyphicon glyphicon-pause"></span>停止</a>
