--- a/index.html
+++ b/index.html
@@ -72,21 +72,26 @@
                 <li><a  href="javascript:void(0);" onclick="volumeUp();">ボリュームアップ</a></li>
                 <li><a  href="javascript:void(0);" onclick="volumeDown();">ボリュームダウン</a></li>
             </ul-->
+            <p>
+                <label class="">画質選択
+                    <select class="form-control" id="suggestedQuality" onchange="updateQuality();">
+                        <option value="small">低画質</option>
+                        <option value="medium">中画質</option>
+                        <option value="large">高画質</option>
+                        <option value="hd720">HD720</option>
+                        <option value="hd1080">HD1080</option>
+                        <option value="highres">ハイレゾ</option>
+                        <option value="default" selected>標準</option>
+                    </select>
+                </label>
+
+            </p>
             <ul class="list-group">
-                <li class="list-group-item"><input type="radio" name="suggestedQuality" onchange="updateQuality('small');" value="small">低画質</li>
-                <li class="list-group-item"><input type="radio" name="suggestedQuality" onchange="updateQuality('medium');" value="medium">中画質</li>
-                <li class="list-group-item"><input type="radio" name="suggestedQuality" onchange="updateQuality('large');" value="large">高画質</li>
-                <li class="list-group-item"><input type="radio" name="suggestedQuality" onchange="updateQuality('hd720');" value="hd720">HD720</li>
-                <li class="list-group-item"><input type="radio" name="suggestedQuality" onchange="updateQuality('hd1080');" value="hd1080">HD1080</li>
-                <li class="list-group-item"><input type="radio" name="suggestedQuality" onchange="updateQuality('highres');" value="highres">ハイレゾ</li>
-                <li class="list-group-item"><input type="radio" name="suggestedQuality" onchange="updateQuality('default');" value="default" checked>標準</li>
+                <li class="list-group-item"><a href="" target="currentPlay" id="currentPlay">再生中の曲<span class="glyphicon glyphicon-share"></span> </a></li>
             </ul>
             <ul class="list-group">
-                <li class="list-group-item"><a href="" target="currentPlay" id="currentPlay">再生中の曲</a></li>
-            </ul>
-            <ul class="list-group">
-                <li class="list-group-item"><a href="http://goosehouse.jp/" target="_blank">オフィシャルページ</a></li>
-                <li class="list-group-item"><a href="http://www.ustream.tv/channel/playyouhouse" target="_blank">オフィシャルustream</a></li>
+                <li class="list-group-item"><a href="http://goosehouse.jp/" target="_blank">オフィシャルページ<span class="glyphicon glyphicon-share"></span></a></li>
+                <li class="list-group-item"><a href="http://www.ustream.tv/channel/playyouhouse" target="_blank">オフィシャルustream<span class="glyphicon glyphicon-share"></span></a></li>
             </ul>
 
         </div>
@@ -94,13 +99,15 @@
             <div id="player"></div>
             <p>
             <div class="btn-group">
-            <a class="btn btn-primary" href="javascript:void(0);" onclick="prevPlay();"><span class="glyphicon glyphicon-step-backward"></span>前の曲</a>
-            <a class="btn btn-primary" href="javascript:void(0);" onclick="replay();"><span class="glyphicon glyphicon-backward"></span>この曲最初から!</a>
-            <a class="btn btn-primary" href="javascript:void(0);" onclick="stop();"><span class="glyphicon glyphicon-pause"></span>停止</a>
-            <a class="btn btn-primary" href="javascript:void(0);" onclick="play();"><span class="glyphicon glyphicon-play"></span>停止からの再生</a>
-            <a class="btn btn-primary" href="javascript:void(0);" onclick="nextPlay();"><span class="glyphicon glyphicon-forward"></span>次の曲</a>
-            <a class="btn btn-primary" href="javascript:void(0);" onclick="toRandom();"><span class="glyphicon glyphicon-refresh"></span>ランダム再生</a>
-            <a class="btn btn-primary" href="javascript:void(0);" onclick="toSequential();"><span class="glyphicon glyphicon-align-justify"></span>順番に再生</a>
+            <a class="btn btn-primary" href="javascript:void(0);" onclick="prevPlay();"><span class="glyphicon glyphicon-backward"></span> 前の曲</a>
+            <a class="btn btn-primary" href="javascript:void(0);" onclick="replay();"><span class="glyphicon glyphicon-step-backward"></span> 頭出し</a>
+            <a class="btn btn-primary" href="javascript:void(0);" onclick="stop();"><span class="glyphicon glyphicon-pause"></span> 停止</a>
+            <a class="btn btn-primary" href="javascript:void(0);" onclick="play();"><span class="glyphicon glyphicon-play"></span> 再生</a>
+            <a class="btn btn-primary" href="javascript:void(0);" onclick="nextPlay();"><span class="glyphicon glyphicon-forward"></span> 次の曲</a>
+            </div>
+            <div class="btn-group">
+            <a class="btn btn-primary" href="javascript:void(0);" onclick="toRandom();"><span class="glyphicon glyphicon-refresh"></span> ランダム再生</a>
+            <a class="btn btn-primary" href="javascript:void(0);" onclick="toSequential();"><span class="glyphicon glyphicon-align-justify"></span> 順番に再生</a>
             </div>
             </p>
         </div>
@@ -275,7 +282,9 @@
     }
 
     function updateQuality(qu) {
-        quality = qu;
+        quality = jQuery('#suggestedQuality option:selected').val();
+        console.log("updateQuality " + quality);
+        //quality = qu;
     }
 
     function toSequential() {
