初期選択をGoose 2014に設定

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     playLists["all"] = playLists["all"].concat(playLists["goose_member_guest_original"]);
     playLists["all"] = playLists["all"].concat(playLists["goose_original"]);
     playLists["all"] = playLists["all"].concat(playLists["goose_christmas"]);
-    var currentPlayList = playLists[playName];
+    var currentPlayList = playLists["goose2014"];
     </script>
 </div> <!-- /container -->
 
